1998-05-12  Vadim Zaliva  <lord@crocodile.org>

	* Options dialog made wider
	* In CDDB setup dialog added list of email serves. 
	* Getting SMTP servers from list of servers.

1998-04-29  Vadim Zaliva  <lord@crocodile.org>

	* Corrected problem with not saving "UnixMailCommand" option which was disabling CDDB submissions.

1998-04-28  Vadim Zaliva  <lord@crocodile.org>

	* Corrected bug in cddb with current CD information disappearing after some time of playing.

1998-04-26  Vadim Zaliva  <lord@crocodile.org>

	* Removed potetial concurency problem in CDDB connection procedure.
	* Added support for protocol level 3 in CDDB connections.

1998-04-17  Vadim Zaliva  <lord@crocodile.org>

	* User and domain name now calculated once, not per each request.

1998-04-16  Vadim Zaliva  <lord@crocodile.org>
	
	* Tested with Netscape Proxy
	
	* Tested with Squid-1.1.18 HTTP proxy
	* Tested with HTTP proxy, w/o HTTP proxy, using CDDBP and HTTP.
	* Small bug in parsing corrected.

	* State automata and parsing reimplemented
	* Works over HTTP with and without HTTP proxy.
	* Tested with M>Wall HTTP proxy
	
	* Implemented more sophisticated HTTP encoding for parameters.
	* kscd.cpp reformated.

	* CDDB over HTTP works, w/o proxy now. Proxy support to be implemeted to-morrow.

1998-04-15  Vadim Zaliva  <lord@crocodile.org>

	* cddb.h, cddb.cpp reformated
	* tested to work with and without HTTP proxy
	* tested with squid 1.1.18
	
	* Added one more default server, with HTTP protocol
	* Code for getting servers list via HTTP done and works.
	* Changed 'cddb' object allocation.
	* (this is intermediate commit, HTTP only partialy works)

1998-04-14  Vadim Zaliva  <lord@crocodile.org>

	* GUI added for setting HTTP proxy to access CDDB. 
	* Config options added for HTTP proxy stuff
	* most includes from cddb.h moved to cddb.cpp,kscd.cpp
	* new version #1.1.1

Tue Apr 14 05:17:36 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* layout corrections for kscd magic dialog 
