@@ -3,7 +3,7 @@
 	--- Qt Architect generated file ---
 
 	File: CDDBSetupData.cpp
-	Last generated: Tue May 12 17:01:24 1998
+	Last generated: Fri May 15 11:56:32 1998
 
 	DO NOT EDIT!!!  This file will be automatically
 	regenerated by qtarch.  All changes will be lost.
@@ -44,7 +44,7 @@ CDDBSetupData::CDDBSetupData
 	dlgedit_Label_8->setMargin( -1 );
 
 	basedir_edit = new QLineEdit( this, "LineEdit_4" );
-	basedir_edit->setGeometry( 20, 140, 495, 28 );
+	basedir_edit->setGeometry( 20, 143, 495, 25 );
 	basedir_edit->setMinimumSize( 10, 10 );
 	basedir_edit->setMaximumSize( 32767, 32767 );
 	basedir_edit->setText( "" );
@@ -133,7 +133,7 @@ CDDBSetupData::CDDBSetupData
 	cddb_http_cb->setAutoResize( FALSE );
 
 	proxy_port_ef = new QLineEdit( this, "LineEdit_6" );
-	proxy_port_ef->setGeometry( 470, 75, 45, 30 );
+	proxy_port_ef->setGeometry( 470, 80, 45, 25 );
 	proxy_port_ef->setMinimumSize( 10, 10 );
 	proxy_port_ef->setMaximumSize( 32767, 32767 );
 	proxy_port_ef->setText( "" );
@@ -142,7 +142,7 @@ CDDBSetupData::CDDBSetupData
 	proxy_port_ef->setFrame( TRUE );
 
 	proxy_host_ef = new QLineEdit( this, "LineEdit_7" );
-	proxy_host_ef->setGeometry( 70, 75, 385, 30 );
+	proxy_host_ef->setGeometry( 70, 80, 385, 25 );
 	proxy_host_ef->setMinimumSize( 10, 10 );
 	proxy_host_ef->setMaximumSize( 32767, 32767 );
 	proxy_host_ef->setText( "" );
