@@ -3,7 +3,7 @@
 	--- Qt Architect generated file ---
 
 	File: CDDBSetupData.h
-	Last generated: Tue May 12 17:01:24 1998
+	Last generated: Fri May 15 11:56:32 1998
 
 	DO NOT EDIT!!!  This file will be automatically
 	regenerated by qtarch.  All changes will be lost.
