@@ -1,3 +1,10 @@
+Fri May 15 18:28:40 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>
+
+	* docking.cpp: fixed up the docking behaviour
+
+	* Some Layout improvements. -- still not 100% satisfied with the
+	  way the config dialogs look now.
+
 1998-05-12  Vadim Zaliva  <lord@crocodile.org>
 
 	* Options dialog made wider
@@ -6,11 +13,13 @@
 
 1998-04-29  Vadim Zaliva  <lord@crocodile.org>
 
-	* Corrected problem with not saving "UnixMailCommand" option which was disabling CDDB submissions.
+	* Corrected problem with not saving "UnixMailCommand" option 
+	  which was disabling CDDB submissions.
 
 1998-04-28  Vadim Zaliva  <lord@crocodile.org>
 
-	* Corrected bug in cddb with current CD information disappearing after some time of playing.
+	* Corrected bug in cddb with current CD information disappearing 
+	  after some time of playing.
 
 1998-04-26  Vadim Zaliva  <lord@crocodile.org>
 
